# SecurityRobot

./: README.md
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: robot.launch  robot_pose_ekf.launch
robot_bringup/remote_env/: env.bash
robot_bringup/scripts/: odom_ekf.py
robot_control/: CMakeLists.txt  package.xml
robot_control/include/robot_control/: baseControl.h
robot_control/msg/: WheelSpeed.msg
robot_control/scripts/: base_controller.py  pid.py  visualizer.py
robot_description/: package.xml
robot_description/config/: mrobot.rviz
robot_description/myurdf/: my_laser.urdf.xacro  robot.urdf.xacro
robot_description/urdf/: robot.urdf.xacro  robot_base.urdf.xacro  robot_camera.urdf.xacro  robot_chassis.urdf.xacro  robot_laser.urdf.xacro
robot_navigation/: CMakeLists.txt  mapsgen.pgm  package.xml
robot_navigation/launch/: gmapping.launch  map_save.launch  map_server.launch  move_base.launch  navigation.launch  slam_manual.launch
robot_navigation/maps/: aic.pgm  aic.yaml  gen.pgm  gen.yaml
robot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
robot_navigation/rviz/: navigation.rviz
robot_navigation/scripts/: client.py  main  map.yaml  robot_map_server.py  test.c  test.py
robot_navigation/srv/: MapAddObstacle.srv  MapCrop.srv  MapEditObstacle.srv
robot_sensor/: CMakeLists.txt
robot_sensor/imu_publish/: CMakeLists.txt  package.xml
robot_sensor/imu_publish/launch/: imu.launch
robot_sensor/imu_publish/scripts/: imu_publisher.py
robot_sensor/imu_publish/src/: mpu6050.c
robot_sensor/lidar_publish/: CMakeLists.txt  package.xml
robot_sensor/lidar_publish/launch/: X4.launch
robot_sensor/lidar_publish/src/: lidar_publisher.cpp
